[package]
name = "codespan"
version = "0.11.1"
readme = "README.md"
license = "Apache-2.0"
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>"]
description = "Data structures for tracking locations in source code"
homepage = "https://github.com/brendanzab/codespan"
repository = "https://github.com/brendanzab/codespan"
documentation = "https://docs.rs/codespan"
edition = "2018"

[dependencies]
codespan-reporting = { path = "../codespan-reporting", optional = true, version = "0.11.1" }
serde = { version = "1.0.117", default-features = false, optional = true, package = "alt_serde", features = ["derive"] }

[dev-dependencies]
termcolor = "1"

[features]
serialization = ["serde", "codespan-reporting/serialization"]
std = [
    "codespan-reporting"
]